@@ -1,3 +1,11 @@
+2007-03-20  Priit Laes  <plaes@svn.gnome.org>
+
+	* gnome-settings-multimedia-keys.c: (do_media_action), (do_action): Added
+	handler for media keybinding.
+	* actions/acme.h: Add defines for media key.
+
+	Introduces preferred media application support. Bug #362578.
+
 2007-03-18  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-settings-multimedia-keys.c: (dialog_show): fix multimedia
